--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     rel="stylesheet" />
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css " />
-  <link rel="stylesheet" href="./css/main.min.css" />
+  <link rel="stylesheet" href="./dist/css/main.min.css" />
 </head>
 
 <body>
@@ -161,7 +161,7 @@
 
     <!-- What do we do -->
 
-    <section class="section">
+    <section class="section-work">
       <div class="container">
         <div class="work">
           <h2 class="work__title">Чем мы занимаемся</h2>
@@ -192,7 +192,7 @@
           <h2 class="staff__title">Наша команда</h2>
           <ul class="staff__list">
             <li class="staff__item">
-              <img src="./images/img.jpg" alt="Продакт дизайнер" width="270" />
+              <img class="staff__img" src="./images/img.jpg" alt="Продакт дизайнер" width="270" />
               <div class="staff__item-card">
                 <h3 class="staff__item-title">Игорь Демьяненко</h3>
                 <p class="staff__item-position" lang="en">Product Designer</p>
@@ -218,7 +218,7 @@
               </div>
             </li>
             <li class="staff__item">
-              <img src="./images/img2.jpg" alt="Фронтэнд разработчик" width="270" />
+              <img class="staff__img" src="./images/img2.jpg" alt="Фронтэнд разработчик" width="270" />
               <div class="staff__item-card">
                 <h3 class="staff__item-title">Ольга Репина</h3>
                 <p class="staff__item-position" lang="en">Frontend Developer</p>
@@ -244,7 +244,7 @@
               </div>
             </li>
             <li class="staff__item">
-              <img src="./images/img3.jpg" alt="Маркутолог" width="270" />
+              <img class="staff__img" src="./images/img3.jpg" alt="Маркутолог" width="270" />
               <div class="staff__item-card">
                 <h3 class="staff__item-title">Николай Тарасов</h3>
                 <p class="staff__item-position" lang="en">Marketing</p>
@@ -270,7 +270,7 @@
               </div>
             </li>
             <li class="staff__item">
-              <img src="./images/img4.jpg" alt="UI Дизайнер" width="270" />
+              <img class="staff__img" src="./images/img4.jpg" alt="UI Дизайнер" width="270" />
               <div class="staff__item-card">
                 <h3 class="staff__item-title">Михаил Ермаков</h3>
                 <p class="staff__item-position" lang="en">UI Designer</p>
@@ -309,7 +309,7 @@
           <ul class="clients__list">
             <li class="clients__item">
               <a href="" class="clients__logo">
-                <svg class="logo-item">
+                <svg class="clients__logo-item">
                   <use href="./images/icon/symbol-defs.svg#icon-Logo1"></use>
                 </svg></a>
             </li>
