--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css " />
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
   <link rel="stylesheet" href="./dist/css/main.min.css" />
 </head>
 
@@ -60,10 +60,12 @@
         <div class="mobile-contacts">
           <ul class="mobile-contacts__list">
             <li class="mobile-contacts__item">
-              <a href="tel:+380961111111" class="mobile-contacts__link phone">+38 096 111 11 11</a>
+              <a href="tel:+380961111111" class="mobile-contacts__link phone">+38
+                096 111 11 11</a>
             </li>
             <li class="mobile-contacts__item">
-              <a href="mailto:info@devstudio.com" class="mobile-contacts__link mail">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="mobile-contacts__link
+                  mail">info@devstudio.com</a>
             </li>
 
           </ul>
@@ -110,7 +112,8 @@
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button type="button" class="hero__button" data-modal-open>Заказать услугу</button>
+        <button type="button" class="hero__button" data-modal-open>Заказать
+          услугу</button>
 
         <!-- Backdrop -->
 
@@ -152,12 +155,11 @@
               </div>
 
               <input class="modal-form-checkbox visually-hidden" type="checkbox" name="agree" value="agree" id="agree">
-              <label class="modal-form-checkbox-label" for="agree">Соглашаюсь с рассылкой и принимаю&nbsp; <a
-                  class="license" href="">Условия
+              <label class="modal-form-checkbox-label" for="agree">Соглашаюсь
+                с рассылкой и принимаю&nbsp; <a class="license" href="">Условия
                   договора</a></label>
 
               <button class="submit-btn" type="submit">Отправить</button>
-
             </form>
           </div>
         </div>
@@ -219,10 +221,10 @@
             <li class="work__item">
               <picture>
                 <source media="(min-width: 1200px )" srcset="./img/occupation/occ-1-desktop.jpg 1x,
-                   ./img/occupation/occ-1-desktop@2x.jpg 2x">
+                    ./img/occupation/occ-1-desktop@2x.jpg 2x">
 
-                <source media="(min-width: 1200px)" srcset="./img/occupation/occ-1-desktop.webp 1x, 
-                   ./img/occupation/occ-1-desktop@2x.webp 2x" type="image/webp">
+                <source media="(min-width: 1200px)" srcset="./img/occupation/occ-1-desktop.webp 1x,
+                    ./img/occupation/occ-1-desktop@2x.webp 2x" type="image/webp">
                 <img src="#" alt="Компьютер" width="370" />
               </picture>
 
@@ -231,10 +233,10 @@
             <li class="work__item">
               <picture>
                 <source media="(min-width: 1200px )" srcset="./img/occupation/occ-2-desktop.jpg 1x,
-                                 ./img/occupation/occ-2-desktop@2x.jpg 2x">
+                    ./img/occupation/occ-2-desktop@2x.jpg 2x">
 
-                <source media="(min-width: 1200px)" srcset="./img/occupation/occ-2-desktop.webp 1x, 
-                                 ./img/occupation/occ-2-desktop@2x.webp 2x" type="image/webp">
+                <source media="(min-width: 1200px)" srcset="./img/occupation/occ-2-desktop.webp 1x,
+                    ./img/occupation/occ-2-desktop@2x.webp 2x" type="image/webp">
                 <img src="#" alt="Ноутбук" width="370" />
               </picture>
               <p class="work__item-description">Мобильные Приложения</p>
@@ -242,10 +244,10 @@
             <li class="work__item">
               <picture>
                 <source media="(min-width: 1200px )" srcset="./img/occupation/occ-3-desktop.jpg 1x,
-                                               ./img/occupation/occ-3-desktop@2x.jpg 2x">
+                    ./img/occupation/occ-3-desktop@2x.jpg 2x">
 
-                <source media="(min-width: 1200px)" srcset="./img/occupation/occ-3-desktop.webp 1x, 
-                                               ./img/occupation/occ-3-desktop@2x.webp 2x" type="image/webp">
+                <source media="(min-width: 1200px)" srcset="./img/occupation/occ-3-desktop.webp 1x,
+                    ./img/occupation/occ-3-desktop@2x.webp 2x" type="image/webp">
                 <img src="#" alt="Планшет" width="370" />
               </picture>
 
@@ -265,7 +267,31 @@
           <h2 class="staff__title">Наша команда</h2>
           <ul class="staff__list">
             <li class="staff__item">
-              <img class="staff__img" src="./images/img.jpg" alt="Продакт дизайнер" width="270" />
+              <picture>
+
+                <!-- Desktop -->
+
+                <source media="(min-width: 1200px )" srcset="./img/team/team-1-desktop.jpg 1x,
+                    ./img/team/team-1-desktop@2x.jpg 2x">
+
+                <source media="(min-width: 1200px)" srcset="./img/team/team-1-desktop.webp 1x,
+                    ./img/team/team-1-desktop@2x.webp 2x" type="image/webp">
+                <!-- tablet -->
+                <source media="(min-width: 768px )" srcset="./img/team/team-1-tablet.jpg 1x,
+                    ./img/team/team-1-desktop@2x.jpg 2x">
+
+                <source media="(min-width: 768px)" srcset="./img/team/team-1-tablet.webp 1x,
+                    ./img/team/team-1-tablet@2x.webp 2x" type="image/webp">
+                <!-- phone -->
+                <source media="(min-width: 480px )" srcset="./img/team/team-1.jpg 1x,
+                    ./img/team/team-1@2x.jpg 2x">
+
+                <source media="(min-width: 480px)" srcset="./img/team/team-1.webp 1x,
+                    ./img/team/team-1@2x.webp 2x" type="image/webp">
+                <img class="staff__img" src="#" alt="Продакт дизайнер" width="270" />
+              </picture>
+
+
               <div class="staff__item-card">
                 <h3 class="staff__item-title">Игорь Демьяненко</h3>
                 <p class="staff__item-position" lang="en">Product Designer</p>
@@ -291,7 +317,30 @@
               </div>
             </li>
             <li class="staff__item">
-              <img class="staff__img" src="./images/img2.jpg" alt="Фронтэнд разработчик" width="270" />
+              <picture>
+
+                <!-- Desktop -->
+
+                <source media="(min-width: 1200px )" srcset="./img/team/team-2-desktop.jpg 1x,
+                    ./img/team/team-2-desktop@2x.jpg 2x">
+
+                <source media="(min-width: 1200px)" srcset="./img/team/team-2-desktop.webp 1x,
+                    ./img/team/team-2-desktop@2x.webp 2x" type="image/webp">
+                <!-- tablet -->
+                <source media="(min-width: 768px )" srcset="./img/team/team-2-tablet.jpg 1x,
+                    ./img/team/team-2-desktop@2x.jpg 2x">
+
+                <source media="(min-width: 768px)" srcset="./img/team/team-2-tablet.webp 1x,
+                    ./img/team/team-2-tablet@2x.webp 2x" type="image/webp">
+                <!-- phone -->
+                <source media="(min-width: 480px )" srcset="./img/team/team-2.jpg 1x,
+                    ./img/team/team-2@2x.jpg 2x">
+
+                <source media="(min-width: 480px)" srcset="./img/team/team-2.webp 1x,
+                    ./img/team/team-2@2x.webp 2x" type="image/webp">
+                <img class="staff__img" src="#" alt="Фронтэнд разработчик" width="270" />
+              </picture>
+
               <div class="staff__item-card">
                 <h3 class="staff__item-title">Ольга Репина</h3>
                 <p class="staff__item-position" lang="en">Frontend Developer</p>
@@ -317,7 +366,30 @@
               </div>
             </li>
             <li class="staff__item">
-              <img class="staff__img" src="./images/img3.jpg" alt="Маркутолог" width="270" />
+              <picture>
+
+                <!-- Desktop -->
+
+                <source media="(min-width: 1200px )" srcset="./img/team/team-3-desktop.jpg 1x,
+                    ./img/team/team-3-desktop@2x.jpg 2x">
+
+                <source media="(min-width: 1200px)" srcset="./img/team/team-3-desktop.webp 1x,
+                    ./img/team/team-3-desktop@2x.webp 2x" type="image/webp">
+                <!-- tablet -->
+                <source media="(min-width: 768px )" srcset="./img/team/team-3-tablet.jpg 1x,
+                    ./img/team/team-3-desktop@2x.jpg 2x">
+
+                <source media="(min-width: 768px)" srcset="./img/team/team-3-tablet.webp 1x,
+                    ./img/team/team-3-tablet@2x.webp 2x" type="image/webp">
+                <!-- phone -->
+                <source media="(min-width: 480px )" srcset="./img/team/team-3.jpg 1x,
+                    ./img/team/team-3@2x.jpg 2x">
+
+                <source media="(min-width: 480px)" srcset="./img/team/team-3.webp 1x,
+                    ./img/team/team-3@2x.webp 2x" type="image/webp">
+                <img class="staff__img" src="#" alt="Маркeтолог" width="270" />
+              </picture>
+
               <div class="staff__item-card">
                 <h3 class="staff__item-title">Николай Тарасов</h3>
                 <p class="staff__item-position" lang="en">Marketing</p>
@@ -343,7 +415,30 @@
               </div>
             </li>
             <li class="staff__item">
-              <img class="staff__img" src="./images/img4.jpg" alt="UI Дизайнер" width="270" />
+              <picture>
+
+                <!-- Desktop -->
+
+                <source media="(min-width: 1200px )" srcset="./img/team/team-4-desktop.jpg 1x,
+                    ./img/team/team-4-desktop@2x.jpg 2x">
+
+                <source media="(min-width: 1200px)" srcset="./img/team/team-4-desktop.webp 1x,
+                    ./img/team/team-4-desktop@2x.webp 2x" type="image/webp">
+                <!-- tablet -->
+                <source media="(min-width: 768px )" srcset="./img/team/team-4-tablet.jpg 1x,
+                    ./img/team/team-4-desktop@2x.jpg 2x">
+
+                <source media="(min-width: 768px)" srcset="./img/team/team-4-tablet.webp 1x,
+                    ./img/team/team-4-tablet@2x.webp 2x" type="image/webp">
+                <!-- phone -->
+                <source media="(min-width: 480px )" srcset="./img/team/team-4.jpg 1x,
+                    ./img/team/team-4@2x.jpg 2x">
+
+                <source media="(min-width: 480px)" srcset="./img/team/team-4.webp 1x,
+                    ./img/team/team-4@2x.webp 2x" type="image/webp">
+                <img class="staff__img" src="#" alt="UI Дизайнер" width="270" />
+              </picture>
+
               <div class="staff__item-card">
                 <h3 class="staff__item-title">Михаил Ермаков</h3>
                 <p class="staff__item-position" lang="en">UI Designer</p>
@@ -422,7 +517,6 @@
       </div>
     </section>
   </main> -->
-
     <!-- Footer -->
 
     <!-- <footer class="footer">
