--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 
     <!-- Clienta -->
 
-    <!-- <section class="section">
+    <section class="section">
       <div class="container company">
         <div class="clients">
           <h2 class="clients__title">Постоянные клиенты</h2>
@@ -516,13 +516,14 @@
 
       </div>
     </section>
-  </main> -->
-    <!-- Footer -->
+  </main>
 
-    <!-- <footer class="footer">
-    <div class="container footer">
-      <div><a href="./index.html" class="footer__logo" lang="en"><span class="logo__first">Web</span><span
-            class="logo__second">Studio</span></a>
+  <!-- Footer -->
+
+  <footer class="footer-main">
+    <div class="container">
+      <div class="footer"><a href="./index.html" class="footer__logo" lang="en"><span
+            class="logo__first">Web</span><span class="logo__second">Studio</span></a>
         <address class="footer__address">
           <p class="footer__address-name">г. Киев, пр-т Леси Украинки, 26</p>
           <ul class="footer__list">
@@ -535,33 +536,33 @@
           </ul>
         </address>
       </div>
-      <div>
-        <h3 class="social-title">Присоединяйтесь</h3>
-        <ul class="social-menu">
-          <li class="social-item">
-            <a href="#" class="social-link">
-              <svg class="social-logo" width="20px" height="20px">
+      <div class="conection">
+        <h3 class="conection__title">Присоединяйтесь</h3>
+        <ul class="conection__menu">
+          <li class="conection__item">
+            <a href="#" class="conection__link">
+              <svg class="conection__logo" width="20px" height="20px">
                 <use href="./images/icon/symbol-defs.svg#icon-instagram-footer"></use>
               </svg>
             </a>
           </li>
-          <li class="social-item">
-            <a href="#" class="social-link">
-              <svg class="social-logo" width="20px" height="20px">
+          <li class="conection__item">
+            <a href="#" class="conection__link">
+              <svg class="conection__logo" width="20px" height="20px">
                 <use href="./images/icon/symbol-defs.svg#icon-twitter-footer"></use>
               </svg>
             </a>
           </li>
-          <li class="social-item">
-            <a href="#" class="social-link">
-              <svg class="social-logo" width="20px" height="20px">
+          <li class="conection__item">
+            <a href="#" class="conection__link">
+              <svg class="conection__logo" width="20px" height="20px">
                 <use href="./images/icon/symbol-defs.svg#icon-facebook-footer"></use>
               </svg>
             </a>
           </li>
-          <li class="social-item">
-            <a href="#" class="social-link">
-              <svg class="social-logo" width="20px" height="20px">
+          <li class="conection__item">
+            <a href="#" class="conection__link">
+              <svg class="conection__logo" width="20px" height="20px">
                 <use href="./images/icon/symbol-defs.svg#icon-linkedin-footer"></use>
               </svg>
             </a>
@@ -569,7 +570,7 @@
         </ul>
       </div>
       <div class="subscribe">
-        <form action="subscribe">
+        <form class="subscribe__form" action="subscribe">
           <h3 class="subscribe-title">Подпишитесь на рассылку</h3>
           <label for="mail" hidden>E-mail</label>
           <div class="subscribe-block">
@@ -583,9 +584,9 @@
 
 
     </div>
-  </footer> -->
-    <script src="./js/modal.js"></script>
-    <script src="./js/mobile-menu.js"></script>
+  </footer>
+  <script src="./js/modal.js"></script>
+  <script src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
