--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
   <!-- Footer -->
 
   <footer class="footer-main">
-    <div class="container">
+    <div class="container bottom">
       <div class="footer"><a href="./index.html" class="footer__logo" lang="en"><span
             class="logo__first">Web</span><span class="logo__second">Studio</span></a>
         <address class="footer__address">
