--- a/index.html
+++ b/index.html
@@ -268,27 +268,21 @@
           <ul class="staff__list">
             <li class="staff__item">
               <picture>
+                <source media="(max-width: 767px)" srcset="./img/team/team-1.webp 1x, ./img/team/team-1@2x.webp 2x"
+                  type="image/webp" />
+                <source media="(max-width: 767px)" srcset="./img/team/team-1.jpg 1x, ./img/team/team-1@2x.jpg 2x" />
 
-                <!-- Desktop -->
+                <source media="(max-width: 1199px)"
+                  srcset="./img/team/team-1-tablet.webp 1x, ./img/team/team-1-tablet@2x.webp 2x" type="image/webp" />
+                <source media="(max-width: 1199px)"
+                  srcset="./img/team/team-1-tablet.jpg 1x, ./img/team/team-1-tablet@2x.jpg 2x" />
 
-                <source media="(min-width: 1200px )" srcset="./img/team/team-1-desktop.jpg 1x,
-                    ./img/team/team-1-desktop@2x.jpg 2x">
+                <source media="(min-width: 1200px)"
+                  srcset="./img/team/team-1-desktop.webp, ./img/team/team-1-desktop@2x.webp 2x" type="image/webp" />
+                <source media="(min-width: 1200px)"
+                  srcset="./imgs/team/team-1-desktop.jpg 1x, ./img/team/team-1-desktop@2x.jpg 2x" />
 
-                <source media="(min-width: 1200px)" srcset="./img/team/team-1-desktop.webp 1x,
-                    ./img/team/team-1-desktop@2x.webp 2x" type="image/webp">
-                <!-- tablet -->
-                <source media="(min-width: 768px )" srcset="./img/team/team-1-tablet.jpg 1x,
-                    ./img/team/team-1-desktop@2x.jpg 2x">
-
-                <source media="(min-width: 768px)" srcset="./img/team/team-1-tablet.webp 1x,
-                    ./img/team/team-1-tablet@2x.webp 2x" type="image/webp">
-                <!-- phone -->
-                <source media="(min-width: 480px )" srcset="./img/team/team-1.jpg 1x,
-                    ./img/team/team-1@2x.jpg 2x">
-
-                <source media="(min-width: 480px)" srcset="./img/team/team-1.webp 1x,
-                    ./img/team/team-1@2x.webp 2x" type="image/webp">
-                <img class="staff__img" src="#" alt="Продакт дизайнер" width="270" />
+                <img class="staff__img" src="#" alt="Игорь Демьяненко Product Designer" />
               </picture>
 
 
@@ -318,27 +312,22 @@
             </li>
             <li class="staff__item">
               <picture>
+                <source media="(max-width: 767px)" srcset="./img/team/team-2.webp 1x, ./img/team/team-2@2x.webp 2x"
+                  type="image/webp" />
+                <source media="(max-width: 767px)" srcset="./img/team/team-2.jpg 1x, ./img/team/team-2@2x.jpg 2x" />
 
-                <!-- Desktop -->
+                <source media="(max-width: 1199px)"
+                  srcset="./img/team/team-2-tablet.webp 1x, ./img/team/team-2-tablet@2x.webp 2x" type="image/webp" />
+                <source media="(max-width: 1199px)"
+                  srcset="./img/team/team-2-tablet.jpg 1x, ./img/team/team-2-tablet@2x.jpg 2x" />
 
-                <source media="(min-width: 1200px )" srcset="./img/team/team-2-desktop.jpg 1x,
-                    ./img/team/team-2-desktop@2x.jpg 2x">
+                <source media="(min-width: 1200px)"
+                  srcset="./img/team/team-2-desktop.webp, ./img/team/team-2-desktop@2x.webp 2x" type="image/webp" />
+                <source media="(min-width: 1200px)"
+                  srcset="./img/team/team-2-desktop.jpg 1x, ./img/team/team-2-desktop@2x.jpg 2x" />
 
-                <source media="(min-width: 1200px)" srcset="./img/team/team-2-desktop.webp 1x,
-                    ./img/team/team-2-desktop@2x.webp 2x" type="image/webp">
-                <!-- tablet -->
-                <source media="(min-width: 768px )" srcset="./img/team/team-2-tablet.jpg 1x,
-                    ./img/team/team-2-desktop@2x.jpg 2x">
-
-                <source media="(min-width: 768px)" srcset="./img/team/team-2-tablet.webp 1x,
-                    ./img/team/team-2-tablet@2x.webp 2x" type="image/webp">
-                <!-- phone -->
-                <source media="(min-width: 480px )" srcset="./img/team/team-2.jpg 1x,
-                    ./img/team/team-2@2x.jpg 2x">
-
-                <source media="(min-width: 480px)" srcset="./img/team/team-2.webp 1x,
-                    ./img/team/team-2@2x.webp 2x" type="image/webp">
-                <img class="staff__img" src="#" alt="Фронтэнд разработчик" width="270" />
+                <img class="staff__img" src="#" alt="Ольга Репина
+Frontend Developer" />
               </picture>
 
               <div class="staff__item-card">
@@ -367,27 +356,22 @@
             </li>
             <li class="staff__item">
               <picture>
+                <source media="(max-width: 767px)" srcset="./img/team/team-3.webp 1x, ./img/team/team-3@2x.webp 2x"
+                  type="image/webp" />
+                <source media="(max-width: 767px)" srcset="./img/team/team-3.jpg 1x, ./img/team/team-3@2x.jpg 2x" />
 
-                <!-- Desktop -->
+                <source media="(max-width: 1199px)"
+                  srcset="./img/team/team-3-tablet.webp 1x, ./img/team/team-3-tablet@2x.webp 2x" type="image/webp" />
+                <source media="(max-width: 1199px)"
+                  srcset="./img/team/team-3-tablet.jpg 1x, ./img/team/team-3-tablet@2x.jpg 2x" />
 
-                <source media="(min-width: 1200px )" srcset="./img/team/team-3-desktop.jpg 1x,
-                    ./img/team/team-3-desktop@2x.jpg 2x">
+                <source media="(min-width: 1200px)"
+                  srcset="./img/team/team-3-desktop.webp, ./img/team/team-3-desktop@2x.webp 2x" type="image/webp" />
+                <source media="(min-width: 1200px)"
+                  srcset="./img/team/team-3-desktop.jpg 1x, ./img/team/team-3-desktop@2x.jpg 2x" />
 
-                <source media="(min-width: 1200px)" srcset="./img/team/team-3-desktop.webp 1x,
-                    ./img/team/team-3-desktop@2x.webp 2x" type="image/webp">
-                <!-- tablet -->
-                <source media="(min-width: 768px )" srcset="./img/team/team-3-tablet.jpg 1x,
-                    ./img/team/team-3-desktop@2x.jpg 2x">
-
-                <source media="(min-width: 768px)" srcset="./img/team/team-3-tablet.webp 1x,
-                    ./img/team/team-3-tablet@2x.webp 2x" type="image/webp">
-                <!-- phone -->
-                <source media="(min-width: 480px )" srcset="./img/team/team-3.jpg 1x,
-                    ./img/team/team-3@2x.jpg 2x">
-
-                <source media="(min-width: 480px)" srcset="./img/team/team-3.webp 1x,
-                    ./img/team/team-3@2x.webp 2x" type="image/webp">
-                <img class="staff__img" src="#" alt="Маркeтолог" width="270" />
+                <img class="staff__img" src="#" alt="Николай Тарасов
+Marketing" />
               </picture>
 
               <div class="staff__item-card">
@@ -416,27 +400,22 @@
             </li>
             <li class="staff__item">
               <picture>
+                <source media="(max-width: 767px)" srcset="./img/team/team-4.webp 1x, ./img/team/team-4@2x.webp 2x"
+                  type="image/webp" />
+                <source media="(max-width: 767px)" srcset="./img/team/team-4.jpg 1x, ./img/team/team-4@2x.jpg 2x" />
 
-                <!-- Desktop -->
+                <source media="(max-width: 1199px)"
+                  srcset="./img/team/team-4-tablet.webp 1x, ./img/team/team-4-tablet@2x.webp 2x" type="image/webp" />
+                <source media="(max-width: 1199px)"
+                  srcset="./img/team/team-4-tablet.jpg 1x, ./img/team/team-4-tablet@2x.jpg 2x" />
 
-                <source media="(min-width: 1200px )" srcset="./img/team/team-4-desktop.jpg 1x,
-                    ./img/team/team-4-desktop@2x.jpg 2x">
+                <source media="(min-width: 1200px)"
+                  srcset="./img/team/team-4-desktop.webp, ./img/team/team-4-desktop@2x.webp 2x" type="image/webp" />
+                <source media="(min-width: 1200px)"
+                  srcset="./img/team/team-4-desktop.jpg 1x, ./img/team/team-4-desktop@2x.jpg 2x" />
 
-                <source media="(min-width: 1200px)" srcset="./img/team/team-4-desktop.webp 1x,
-                    ./img/team/team-4-desktop@2x.webp 2x" type="image/webp">
-                <!-- tablet -->
-                <source media="(min-width: 768px )" srcset="./img/team/team-4-tablet.jpg 1x,
-                    ./img/team/team-4-desktop@2x.jpg 2x">
-
-                <source media="(min-width: 768px)" srcset="./img/team/team-4-tablet.webp 1x,
-                    ./img/team/team-4-tablet@2x.webp 2x" type="image/webp">
-                <!-- phone -->
-                <source media="(min-width: 480px )" srcset="./img/team/team-4.jpg 1x,
-                    ./img/team/team-4@2x.jpg 2x">
-
-                <source media="(min-width: 480px)" srcset="./img/team/team-4.webp 1x,
-                    ./img/team/team-4@2x.webp 2x" type="image/webp">
-                <img class="staff__img" src="#" alt="UI Дизайнер" width="270" />
+                <img class="staff__img" src="#" alt="Михаил Ермаков
+UI Designer" />
               </picture>
 
               <div class="staff__item-card">
