--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </svg>
         </button>
         <div>
-          <ul class="mobile-nav_list">
+          <ul class="mobile-nav__list">
             <li class="mobile-nav__item">
               <a href="./index.html" class="mobile-nav__link--current">Студия</a>
             </li>
