--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
           </svg>
         </button>
         <div>
-          <ul class="mobile-nav_list">
+          <ul class="mobile-nav__list">
             <li class="mobile-nav__item">
               <a href="./index.html" class="mobile-nav__link">Студия</a>
             </li>
